--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs markdown lint
+      # As given below
       - name: Run markdown lint
         run: |
           npm install remark-cli remark-preset-lint-consistent
