--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,15 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs markdown lint
-      # As given below
+      
       - name: Run markdown lint
         run: |
           npm install remark-cli remark-preset-lint-consistent
           npx remark . --use remark-preset-lint-consistent --frail
-
+      
+      # upload artifacts to the artifact storage
+      - uses: actions/upload-artifact@main
+        with:
+          name: remark-lint-report
+          path: public/
      
